objects/Quote_Discount_Matrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>End_Discount__c</fullName>
        <label>End Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Discount__c</fullName>
        <label>Start Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Discount Matrix</label>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Year__c</columns>
        <columns>Start_Discount__c</columns>
        <columns>End_Discount__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
    </listViews>
</CustomObject>